--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "prod": "vite build && cd d:/deno/lemonlive && deployctl deploy --prod && cd f:/vue/lemonlive",
+    "prod": "vite build && cd d:/deno/lemonlive && deployctl deploy --prod && cd C:/Users/31808/Downloads/lemon-live-e373215cf03e206454c0526780ab9dc790a07531/lemon-live",
     "git": "vite build github/dist"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
     "@types/pako": "^2.0.3",
     "lemon-mse": "^0.1.7",
+    "lz-string": "^1.5.0",
     "pako": "^2.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.1"
@@ -22,6 +23,7 @@
     "@iconify-json/heroicons": "^1.1.20",
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/ri": "^1.1.20",
+    "@types/lz-string": "^1.5.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
